# Simple-HTTP-file-server

./: .gitignore  CMakeLists.txt  README.md  WebServer.cpp
Modules/: ClientConn.cpp  ClientConn.hpp  DirsAndFiles.cpp  DirsAndFiles.hpp  FSMonitoring.cpp  FSMonitoring.hpp  FileServer.cpp  FileServer.hpp  HTTPSupport.cpp  HTTPSupport.hpp  HtmlWork.cpp  HtmlWork.hpp  SocketMain.cpp  SocketMain.hpp  StringFunctions.cpp  StringFunctions.cpp.bak  StringFunctions.hpp  StringFunctions.hpp.bak
Trash/: WebServer.cpp
